--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "HBWABot",
-  "version": "6.0.0",
-  "description": "Automated whatsapp md bot created using nodejs and baileys lib",
-  "type": "commonjs",
+  "name": "HBWABot-v2",
+  "version": "4.0.1",
+  "description": "Multi device wa bot created by HbMods",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
-    "start": "npm i -g pm2 && pm2 start index.js && pm2 save && pm2 logs"
+    "start": "node --expose-gc index.js"
+    
   },
   "keywords": [
     "termux",
     "whatsapp",
-    "2022",
+    "2021",
+    "wabase-md",
     "base",
     "baileys-md",
     "bot",
     "bot-md",
-    "multi-device",
-    "xeon-bot-inc"
+    "multi-device"
   ],
-  "author": "HBMods",
+   "author": "HBMods",
   "license": "AGPL-3",
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
@@ -77,14 +81,14 @@
     "youtubedl-core": "^4.11.2"
   },
   "directories": {
-    "lib": "lib",
-    "src": "src"
+    "lib": "lib"
   },
-  "devDependencies": {},
-  "repository": "git+https://github.com/DGXeon/CheemsBot-MD6.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HBMods-OFC/HBWABot-v2.git"
+  },
   "bugs": {
-    "url": "https://github.com/DGXeon/CheemsBot-MD6/issues"
+    "url": "https://github.com/HBMods-OFC/HBWABot-v2/issues"
   },
-  "homepage": "https://github.com/DGXeon/CheemsBot-MD6/#readme",
-  "main": "index.js"
+  "homepage": "https://github.com/HBMods-OFC/HBWABot-v2#readme"
 }
