--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "HBWABot-v2",
   "version": "4.0.1",
-  "description": "Multi device wa bot created by HbMods",
+  "description": "Multi device wa bot created by HBWABot.",
   "main": "index.js",
   "directories": {
     "lib": "lib"
@@ -21,62 +21,78 @@
     "bot-md",
     "multi-device"
   ],
-   "author": "HBMods",
-  "license": "AGPL-3",
+  "author": "HBMods",
+  "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "^4.4.0",
+    "@adiwajshing/baileys": "^5.0.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^2.0.0",
+    "@mozilla/readability": "^0.4.2",
+    "@neoxr/neoxr-js": "^1.3.0",
     "anime-wallpaper": "^1.0.2",
+    "anime-wallpapers": "^1.0.1",
+    "assert": "2.0.0",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
+    "blennie-drips": "^5.0.0",
+    "browser-id3-writer": "^4.4.0",
+    "cfonts": "^3.1.0",
     "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
-    "dhn-api": "^1.1.3",
-    "emoji-api": "^1.0.2",
+    "dotenv": "^16.0.0",
+    "drips-memes": "^6.0.4",
+    "emoji-api": "^2.0.1",
+    "express": "^4.18.2",
+    "fake-useragent": "^1.0.1",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "g-i-s": "^2.1.6",
-    "genshin-api": "^2.1.0",
-    "google-it": "^1.6.3",
+    "google-it": "^1.6.2",
     "got": "^11.8.3",
+    "heroku-client": "^3.1.0",
+    "heroku-keep-awake": "^1.1.2",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "human-readable": "^0.2.1",
+    "hx-api": "^1.3.2",
+    "hxz-api": "^1.0.1",
     "insta-fetcher": "^1.3.24",
     "jimp": "^0.16.1",
-    "jsdom": "^16.4.0",
-    "lowdb": "^2.1.0",
-    "mal-scraper": "^2.11.4",
+    "jsdom": "^16.7.0",
+    "kitsune-api": "^0.0.0",
+    "link-preview-js": "^3.0.4",
+    "mathjs": "^10.5.1",
     "moment-timezone": "^0.5.34",
-    "mongoose": "^6.2.1",
     "mumaker": "^1.0.0",
+    "multistream": "^4.1.0",
+    "newsapi": "^2.4.1",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "node-id3": "^0.2.3",
-    "node-webpmux": "^3.1.1",
+    "node-webpmux": "^3.1.0",
     "node-youtube-music": "^0.8.3",
+    "openai": "^3.1.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "perf_hooks": "0.0.1",
+    "pg": "^8.7.3",
     "pino": "^7.0.5",
-    "qrcode": "^1.5.0",
-    "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
-    "qs": "^6.5.3",
-    "reddit-image-fetcher": "^2.0.11",
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
     "scrape-primbon": "^1.1.0",
-    "simple-find-lyrics": "^0.0.1",
-    "spotifydl-x": "^0.3.0",
-    "textmaker-thiccy": "^1.3.1",
-    "tod-api": "^1.0.5",
+    "sequelize": "^6.19.0",
+    "simple-git": "^3.7.1",
+    "sqlite": "^4.1.1",
+    "sqlite3": "^5.0.8",
+    "supervisor": "^0.12.0",
+    "url": "^0.11.0",
     "util": "^0.12.4",
-    "wa-sticker-formatter": "^4.3.2",
-    "xfarr-api": "^1.0.2",
     "yargs": "^17.2.1",
+    "yt-search": "^2.10.3",
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.2"
   },
